Fixed social alignment and added dash to blockquote

--- a/versions/v6/static/scss/_type.scss
+++ b/versions/v6/static/scss/_type.scss
@@ -114,6 +114,10 @@ blockquote {
       font-size: 16px;
       line-height: 20px;
     }
+
+    &:before {
+      content: '\2014 \00A0'; // em dash, nbsp
+    }
   }
 
   cite {
